[package]
name = "turbo-crates"
version = "0.0.1"
edition = "2021"
authors = ["Arunas Iva"]
description = "A set of useful crates (WIP)"
repository = "https://github.com/ariva/turbo-crates.git"
license = "MIT OR Apache-2.0"

[workspace]
members = [
  "crates/testing/*"
]

[dependencies]
testing_proc_macros = { path = "crates/testing/proc_macros" }
