[package]
name = "turbo-crates"
version = "0.0.2"
edition = "2021"
authors = ["Arunas Iva"]
description = "A set of useful crates (WIP)"
repository = "https://github.com/ariva/turbo-crates.git"
license = "MIT OR Apache-2.0"

[workspace]
members = [
  "crates/testing/*"
]

[dependencies]
turbo-crates-testing-proc-macros = { version="0.0.2", path = "crates/testing/proc_macros" }
