[package]
name = "turbo-crates"
version = "0.0.3"
edition = "2021"
authors = ["Arunas Iva"]
description = "A set of useful crates (WIP)"
repository = "https://github.com/ariva/turbo-crates.git"
license = "MIT OR Apache-2.0"

[workspace]
members = [
  "crates/testing/*",
]

[features]
default = ["full"]
full = ["testing"]
testing = ["testing-proc-macros"]
testing-proc-macros = ["dep:turbo-crates-testing-proc-macros"]

[dependencies]
turbo-crates-testing-proc-macros = { version="0.0.2", path = "crates/testing/proc_macros", optional = true }
