[package]
name = "testing_proc_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = { version = "2.0.15", features = ["full", "fold", "printing"] }
proc-macro2 = "1.0"
once_cell = "1.7"
